assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
	.prose-custom {
		@apply
		leading-loose
		prose
		dark:prose-invert
		prose-h2:font-medium prose-h2:before:content-['#'] prose-h2:before:mr-2 prose-h2:relative prose-h2:-left-4
		prose-h3:font-medium prose-h3:before:content-['##'] prose-h3:before:mr-2 prose-h3:relative prose-h3:-left-6
		prose-h4:font-medium prose-h4:before:content-['###'] prose-h4:before:mr-2 prose-h4:relative prose-h4:-left-8
		prose-h5:font-medium prose-h5:before:content-['####'] prose-h5:before:mr-2 prose-h5:relative prose-h5:-left-10
		prose-a:prose-headings:border-b-2
		prose-a:prose-headings:border-neutral-600
		prose-a:no-underline
		prose-a:prose-headings:pb-2
		prose-a:border-b-2
		prose-a:pb-1
		prose-a:border-neutral-200
		prose-headings:text-base
		underline-offset-8
	}
}

